Version 1.3.0           2021-05-12

Added
- 2FA info button
- breadcrumbs removed
- font awesome update to 1.15.3
- vehicle connect icon, wakeup, and hide disconnected vehicle status

Fixed
- Redirect after login
- Request vehicle status update when enabling
- Developer branch webupdate

Version 1.2.9           2021-05-06

Fixed
- Install from front-end failed on stopping the Oppleo service.
- NOTE: Due to changes in the call to the install script (flaskRoutes.py) the install script cannot be run from the front end successfully. Run 'install/install.sh' from the command line in the '/home/pi/Oppleo' folder to apply this update succesfully.


Version 1.2.8           2021-05-06

Fixed
- For development disabled threads re-enabled


Version 1.2.7           2021-05-05

Fixed
- Update version number fixed.
- NOTE: Due to changes in the version update check Oppleo will not detect this update from the web gui. Run 'install/install.sh' (twice!) from the command line in the '/home/pi/Oppleo' folder to force this update.
- NOTE: Due to changes in the install script (install.sh uses a different requirements.txt filename) the install script must be run twice. This first run will install the correct install.sh script, the second run will run that correct script.


Version 1.2.6           2021-05-05

Fixed
- requirements.txt fixed.


Version 1.2.5           2021-05-05

Added
- Two Factor Authentication (2FA) with Time-based One-time Password Algorithm (TOTP; specified in RFC 6238). i.e. Google Authenticator App. Currently no 2FA on restart/switch off.
- Account page.


Version 1.2.4           2021-04-29

Fixed
- Removed github date from settings (in master)


Version 1.2.3           2021-04-29

Added
- Software version info when on developer branch


Version 1.2.2           2021-04-23

Added
- Version information in changelog, available on settings page.


Version 1.2.1           2021-04-22

Fixed
- Faster initial vehicle status.


Version 1.2.0       2021-04-14

Added